final dark mode fixes

--- a/ui/public/storybook-overrides.css
+++ b/ui/public/storybook-overrides.css
@@ -13,43 +13,31 @@
 
 /*
     - Ensure dark mode in Storybook UI works, and docs are legible by forcing light mode.
-    - Nuke '--lightningcss' custom props (generated by Parcel bundler) so Storybook can utilise native CSS 'light-dark()' function. See https://lightningcss.dev/transpilation.html#light-dark()-color-function.
+    - Set '--lightningcss' custom props (generated by Parcel bundler). See https://lightningcss.dev/transpilation.html#light-dark()-color-function.
     - NOTE: Firefox reports inconclusive color contrast in Storybook a11y addon for most/all components, but Chrome is OK.
 */
-:where(html, body) {
-    /* --lightningcss-light: ;
-    --lightningcss-dark: ; */
-
-    /* background-color: light-dark(
-        var(--webui-color-neutral-100),
-        var(--webui-color-neutral-700)
-    );
-    color: light-dark(
-        var(--webui-color-neutral-900),
-        var(--webui-color-neutral-300)
-    ); */
-}
-
-html {
-    /* color-scheme: light dark; */
-}
-
 .dark {
-    /* color-scheme: dark; */
+    --lightningcss-light: ;
+    --lightningcss-dark: initial;
 
-    /* [id='storybook-docs'] {
+    color-scheme: dark;
+
+    [id='storybook-docs'] {
+        --lightningcss-light: initial;
+        --lightningcss-dark: ;
+
         color-scheme: light;
     }
 
     [data-story-block='true'],
     baseline-status {
         color: initial;
-    } */
+    }
 }
 
 @media (prefers-color-scheme: dark) {
     [id='storybook-docs'] {
-        --lightningcss-light: ;
+        --lightningcss-light: initial;
         --lightningcss-dark: ;
 
         color-scheme: light;
